# libtasks

./: CMakeLists.txt  Makefile  README.md  libtasks.spec
cmake/: CMakeBase.cmake  FindLibEV.cmake
examples/: CMakeLists.txt  Makefile  echo_handler.cpp  echo_handler.h  echotest.pl  echotest.plot
examples/echoserver/: CMakeLists.txt  Makefile  echoserver.cpp  echoserver.h  echotest.pl
examples/http_client/: CMakeLists.txt  Makefile  http_client.cpp
examples/ip_service_client/: CMakeLists.txt  Makefile  ipservice.thrift  thrift_http_client.cpp
examples/ip_service_server/: CMakeLists.txt  Makefile  ip_service.cpp  ip_service.h  nginx.conf
examples/jsontest/: CMakeLists.txt  Makefile  jsontest.cpp
examples/thrift/: test.thrift  uwsgi_handler.cpp  uwsgi_handler.h
examples/thrift_client/: CMakeLists.txt  Makefile  thrift_http_client.cpp
examples/thrift_server/: CMakeLists.txt  Makefile  stats.cpp  stats.h  test.thrift  uwsgi_handler.cpp  uwsgi_handler.h
examples/uwsgi/: CMakeLists.txt  Makefile  nginx.conf  stats.cpp  stats.h  uwsgi_handler.cpp  uwsgi_handler.h  uwsgitest.pl
include/tasks/: cleanup_task.h  disk_io_task.h  dispatcher.h  disposable.h  error_base.h  ev_wrapper.h  event_task.h  exec.h  exec_task.h  executor.h  logging.h  net_io_task.h  task.h  tasks_exception.h  timer_task.h  version.h  worker.h
include/tasks/net/: acceptor.h  http_base.h  http_request.h  http_response.h  http_sender.h  io_state.h  socket.h  uwsgi_request.h  uwsgi_structs.h  uwsgi_task.h  uwsgi_thrift_async_handler.h  uwsgi_thrift_async_processor.h  uwsgi_thrift_handler.h  uwsgi_thrift_processor.h  uwsgi_thrift_transport.h
include/tasks/tools/: bitset.h  buffer.h  itostr.h  queue.h  spinlock.h  thrift_server_writer.h
pkgconfig/: libtasks.pc  libtasks.pc.in
tasks/: CMakeLists.txt  Makefile  acceptor.h  disk_io_task.cpp  disk_io_task.h  dispatcher.cpp  dispatcher.h  ev_wrapper.h  event_task.cpp  exec.cpp  executor.cpp  io_task.cpp  io_task.h  logging.cpp  logging.h  net_io_task.cpp  net_io_task.h  task.cpp  task.h  timer_task.cpp  timer_task.h  version.cpp  version.h  worker.cpp  worker.h
tasks/net/: acceptor.h  http_base.cpp  http_base.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_sender.h  io_state.h  socket.cpp  socket.h  uwsgi_request.cpp  uwsgi_request.h  uwsgi_response.cpp  uwsgi_response.h  uwsgi_structs.h  uwsgi_task.cpp  uwsgi_task.h  uwsgi_thrift_handler.h  uwsgi_thrift_processor.h  uwsgi_thrift_transport.h
tasks/tools/: bitset.h  buffer.h  itostr.cpp  itostr.h  queue.h  spinlock.h  thrift_server_writer.h
tests/: CMakeLists.txt  Makefile  main.cpp  nginx.conf  runtests.sh  test_bitset.cpp  test_bitset.h  test_disk_io_task.cpp  test_disk_io_task.h  test_exec.cpp  test_exec.h  test_http_sender.cpp  test_http_sender.h  test_socket.cpp  test_socket.h  test_uwsgi_thrift.cpp  test_uwsgi_thrift.h  test_uwsgi_thrift_async.cpp  test_uwsgi_thrift_async.h
