project(examples)
cmake_minimum_required(VERSION 2.6)

add_subdirectory(echoserver)
add_subdirectory(http_client)
add_subdirectory(jsontest)
add_subdirectory(ip_service_client)
add_subdirectory(ip_service_server)
add_subdirectory(thrift_client)
add_subdirectory(thrift_server)
add_subdirectory(uwsgi)
